--- a/Views/Home/Calendar.cshtml
+++ b/Views/Home/Calendar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "Calender";
-    
+    @using System.Globalization;
 }
 
 @section Styles{
@@ -10,80 +10,105 @@
 
 }
 
-<div id="calendar" class="noselect">   
+<div id="calendar" class="noselect">
 </div>
-<div id="calendar-modal" class="" >
+<div id="calendar-modal" class="" style="width:75%">
     <form>
         <div class="form-group">
-            <label for="exampleInputEmail1">Task Name</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <label for="cron-task-name">Task Name</label>
+            <input type="text" class="form-control" id="cron-task-name" name="cron-task-name" aria-describedby="emailHelp" placeholder="Task Email">
         </div>
         <div class="form-group">
-
+            <hr />
+            <label class="align-self-center text-center" for="cron-output">Task Schedule</label>
             <div class="form-row cron-container">
-                <div>
-                    <strong>Hours</strong>
-                    <select multiple="multiple" size="12" class="form-control form-" id="cron-hours" name="cron-hours">
-                        @for(int i=0;i<24;i++){
-                        <option value="@i">@{if(i < 10){ <p>0</p>@i }else{@i}}</option>
-                    }
+                <div class="cron-items">
+                    <h6>Hours</h6>
+                    <select multiple="multiple" size="12" class="form-control form-" id="cron-hours" name="cron-hours" onchange="updateField('hours')">
+                        @for (int i = 0; i < 24; i++)
+                        {
+                            <option selected="selected" value="@i">
+                                @{if (i < 10)
+                                    { <p>0</p>@i }
+                                else
+                                {@i}}
+                            </option>
+                        }
                     </select>
-                    <a href="javascript:cronHelperSelectAll('#cron-minutes')">select all</a>
+                    <div class="mt-1">
+                        <a class="btn-sm  btn-primary" href="javascript:cronHelperSelectAll('#cron-hours')">select all</a>
+                    </div>
                 </div>
-                <div>
-                    <strong>Minutes</strong>
-                    <select multiple="multiple" size="12" class="form-control" id="cron-minutes" name="cron-minutes">
-                        @for(int i=0;i<60;i++){
-                        <option value="@i">@{if(i < 10){ <p>0</p>@i }else{@i}}</option>
-                    }
+                <div class="cron-items">
+                    <h6>Minutes</h6>
+                    <select multiple="multiple" size="12" class="form-control" id="cron-minutes" name="cron-minutes" onchange="updateField('minutes')">
+                        @for (int i = 0; i < 60; i++)
+                        {
+                            <option selected="selected" value="@i">
+                                @{if (i < 10)
+                                    { <p>0</p>@i }
+                                else
+                                {@i}}
+                            </option>
+                        }
                     </select>
-                    <a href="javascript:cronHelperSelectAll('#cron-minutes')">select all</a>
+                    <div class="mt-1">
+                        <a class="btn-sm  btn-primary" href="javascript:cronHelperSelectAll('#cron-minutes')">select all</a>
+                    </div>
                 </div>
 
-                <div>
-                    <strong>Days in Month</strong>
-                    <select multiple="multiple" size="12" class="form-control" id="cron-dim" name="cron-dim">
-                        @for(int i=0;i<60;i++){
-                        <option value="@i">@{if(i < 10){ <p>0</p>@i }else{@i}}</option>
-                    }
+                <div class="cron-items">
+                    <h6>Days in Month</h6>
+                    <select multiple="multiple" size="12" class="form-control" id="cron-dim" name="cron-dim" onchange="updateField('dom')">
+                        @for (int i = 0; i < 60; i++)
+                        {
+                            <option selected="selected" value="@i">
+                                @{if (i < 10)
+                                    { <p>0</p>@i }
+                                else
+                                {@i}}
+                            </option>
+                        }
                     </select>
-                    <a href="javascript:cronHelperSelectAll('#cron-dim')">select all</a>
+                    <div class="mt-1">
+                        <a class="btn-sm  btn-primary" href="javascript:cronHelperSelectAll('#cron-dim')">select all</a>
+                    </div>
                 </div>
-                <div>
-                    <strong>Months</strong>
-                    <select multiple="multiple" size="12" class="form-control" id="cron-months" name="cron-months">
+                <div class="cron-items">
+                    <h6>Months</h6>
+                    <select multiple="multiple" size="12" class="form-control" id="cron-months" name="cron-months" updateField('months')>
                         @{
-                            @using System.Globalization;
-
-                            for(int i=0; i<=12; i++)
+                            for (int i = 0; i < 12; i++)
                             {
-                            <option value="@i">@DateTimeFormatInfo.CurrentInfo.MonthNames[i]</option>
+                                <option selected="selected" value="@i">@DateTimeFormatInfo.CurrentInfo.MonthNames[i]</option>
                             }
                         }
                     </select>
-                    <a href="javascript:cronHelperSelectAll('#cron-dim')">select all</a>
+                    <div class="mt-1">
+                        <a class="btn-sm  btn-primary" href="javascript:cronHelperSelectAll('#cron-months')">select all</a>
+                    </div>
                 </div>
-                @*<div>
-                    <strong>Days in Week</strong>
-                    <select multiple="multiple" size="12" class="form-control" id="cron-months" name="cron-months">
+                <div class="cron-items">
+                    <h6>Days in Week</h6>
+                    <select multiple="multiple" size="12" class="form-control" id="cron-days" name="cron-days" updateField('dow')>
                         @{
-                            @using System.Globalization;
-
-                            for(int i=0; i<=7; i++)
+                            for (int i = 0; i <= 6; i++)
                             {
-                            <option value="@i">@DateTimeFormatInfo.CurrentInfo.DayNames[i]</option>
+                                <option selected="selected" value="@i">@DateTimeFormatInfo.CurrentInfo.DayNames[i]</option>
                             }
                         }
                     </select>
-                    <a href="javascript:cronHelperSelectAll('#cron-dim')">select all</a>
-                </div>*@
+                    <div class="mt-1">
+                        <a class="btn-sm  btn-primary" href="javascript:cronHelperSelectAll('#cron-days')">select all</a>
+                    </div>
+                </div>
             </div>
-            
 
 
-            <label for="exampleInputPassword1">Task Schedule</label>
-            <input type="text" readonly class="form-control" id="exampleInputPassword1" placeholder="@DateTime.Now.ToString("f")">
+            <div class="mt-4">
+                <input class="form-control" type="text" id="cron-output" name="cron-output" value="* * * * *" onkeyup="importCronExpressionFromInput('#cron-output')">
+            </div>
+            <hr />
         </div>
         <div class="form-group form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -97,4 +122,5 @@
 @section Scripts{
     <script src="~/lib/calender.js/Calendar.js" type="text/javascript"></script>
     <script src="~/js/CalenderScript.js" type="text/javascript"></script>
+    <script src="~/js/CronExpressionGenrator.js" type="text/javascript"></script>
 }
