--- a/Views/Home/Calendar.cshtml
+++ b/Views/Home/Calendar.cshtml
@@ -13,7 +13,7 @@
 <div id="calendar" class="noselect">
 </div>
 <div id="calendar-modal" class="" >
-    <form>
+    <form id="ScheduleTaskForm">
         <div class="form-group">
             <label for="cron-task-name">Task Name</label>
             <input type="text" class="form-control" id="cron-task-name" name="cron-task-name" aria-describedby="emailHelp" placeholder="Task Email">
@@ -78,9 +78,11 @@
                     <h6>Months</h6>
                     <select multiple="multiple" size="7" class="form-control" id="cron-months" name="cron-months" onchange="updateField('months')">
                         @{
+                            int count = 1;
                             for (int i = 0; i < 12; i++)
                             {
-                                <option selected="selected" value="@i">@DateTimeFormatInfo.CurrentInfo.MonthNames[i]</option>
+                                <option selected="selected" value="@count ">@DateTimeFormatInfo.CurrentInfo.MonthNames[i]</option>
+                                count++;
                             }
                         }
                     </select>
@@ -107,20 +109,26 @@
 
             <div class="mt-4">
                 <input class="form-control" type="text" id="cron-output" name="cron-output" value="* * * * *" onkeyup="importCronExpressionFromInput('#cron-output')">
+                <small id="cron-expression-desc"></small>
             </div>
             <hr />
         </div>
         <div class="">
             <label class="" for="exampleCheck1">Check me out</label>
-            <textarea type="text" class="form-control" id="cron-description" rows="4"></textarea>
+            <textarea type="text" class="form-control" id="cron-description" rows="4" name="cron-discription"></textarea>
         </div>
             
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" id="SubmitTask" >Submit <i class="far fa-paper-plane"></i></button>
     </form>
 </div>
 
 
 @section Scripts{
+    <script src="https://unpkg.com/cronstrue@latest/dist/cronstrue.min.js" async></script>
+    <script>
+        var cronstrue = window.cronstrue;
+    </script>
+    <script src="~/lib/fontawesome/js/all.min.js" type="text/javascript"></script>
     <script src="~/lib/calender.js/Calendar.js" type="text/javascript"></script>
     <script src="~/js/CalenderScript.js" type="text/javascript"></script>
     <script src="~/js/CronExpressionGenrator.js" type="text/javascript"></script>
