--- a/Views/Home/Calendar.cshtml
+++ b/Views/Home/Calendar.cshtml
@@ -2,6 +2,16 @@
 @{
     ViewData["Title"] = "Calender";
     @using System.Globalization;
+
+}
+
+@functions {
+
+    public int AddBy(int Value, int By)
+    {
+        return Value + By;
+    }
+
 }
 
 @section Styles{
@@ -12,16 +22,33 @@
 
 <div id="calendar" class="noselect">
 </div>
-<div id="calendar-modal" class="" >
+<div id="calendar-modal" class="">
     <form id="ScheduleTaskForm">
         <div class="form-group">
             <label for="cron-task-name">Task Name</label>
-            <input type="text" class="form-control" id="cron-task-name" name="cron-task-name" aria-describedby="emailHelp" placeholder="Task Email">
+            <input type="text" class="form-control" id="cron-task-name" name="cron-task-name" aria-describedby="Task Name" placeholder="Task Name">
         </div>
         <div class="form-group">
             <hr />
             <label class="align-self-center text-center" for="cron-output">Task Schedule</label>
             <div class="form-row cron-container">
+                <div class="cron-items">
+                    <h6>Minutes</h6>
+                    <select multiple="multiple" size="7" class="form-control" id="cron-minutes" name="cron-minutes" onchange="updateField('minutes')">
+                        @for (int i = 0; i < 60; i++)
+                        {
+                            <option selected="selected" value="@i">
+                                @{if (i < 10)
+                                    { <p>0</p>@i }
+                                else
+                                {@i}}
+                            </option>
+                        }
+                    </select>
+                    <div class="mt-1">
+                        <a class="btn-sm  btn-primary" href="javascript:cronHelperSelectAll('#cron-minutes')">select all</a>
+                    </div>
+                </div>
                 <div class="cron-items">
                     <h6>Hours</h6>
                     <select multiple="multiple" size="7" class="form-control form-" id="cron-hours" name="cron-hours" onchange="updateField('hours')">
@@ -40,29 +67,11 @@
                     </div>
                 </div>
                 <div class="cron-items">
-                    <h6>Minutes</h6>
-                    <select multiple="multiple" size="7" class="form-control" id="cron-minutes" name="cron-minutes" onchange="updateField('minutes')">
-                        @for (int i = 0; i < 60; i++)
-                        {
-                            <option selected="selected" value="@i">
-                                @{if (i < 10)
-                                    { <p>0</p>@i }
-                                else
-                                {@i}}
-                            </option>
-                        }
-                    </select>
-                    <div class="mt-1">
-                        <a class="btn-sm  btn-primary" href="javascript:cronHelperSelectAll('#cron-minutes')">select all</a>
-                    </div>
-                </div>
-
-                <div class="cron-items">
                     <h6>Days in Month</h6>
                     <select multiple="multiple" size="7" class="form-control" id="cron-dim" name="cron-dim" onchange="updateField('dim')">
-                        @for (int i = 0; i < 60; i++)
+                        @for (int i = 0; i <=31 ; i++)
                         {
-                            <option selected="selected" value="@i">
+                            <option selected="selected" value="@AddBy(i,1)">
                                 @{if (i < 10)
                                     { <p>0</p>@i }
                                 else
@@ -109,24 +118,29 @@
 
             <div class="mt-4">
                 <input class="form-control" type="text" id="cron-output" name="cron-output" value="* * * * *" onkeyup="importCronExpressionFromInput('#cron-output')">
-                <small id="cron-expression-desc"></small>
+                <small id="cron-expression-desc" ></small>
             </div>
             <hr />
         </div>
-        <div class="">
-            <label class="" for="exampleCheck1">Check me out</label>
+        <div>
+            <label for="cllback-url">Callback URL</label>
+            <input type="url" class="form-control" id="cron-callback" name="cron-callback">
+            <label class="" for="cron-discription">Task Description</label>
             <textarea type="text" class="form-control" id="cron-description" rows="4" name="cron-discription"></textarea>
         </div>
-            
-        <button type="submit" class="btn btn-primary" id="SubmitTask" >Submit <i class="far fa-paper-plane"></i></button>
+        <div class="w-100 d-flex justify-content-center pt-3">
+            <button type="submit" class="btn btn-primary align-self-center" id="SubmitTask">Submit <i class="far fa-paper-plane"></i></button>
+        </div>
     </form>
 </div>
 
 
 @section Scripts{
-    <script src="https://unpkg.com/cronstrue@latest/dist/cronstrue.min.js" async></script>
+    <script src="~/lib/cronstrue/dist/cronstrue.min.js" async></script>
+    <script src="~/lib/cron-validator/lib/index.min.js" async></script>
     <script>
         var cronstrue = window.cronstrue;
+        var cron = window.cron;
     </script>
     <script src="~/lib/fontawesome/js/all.min.js" type="text/javascript"></script>
     <script src="~/lib/calender.js/Calendar.js" type="text/javascript"></script>
