--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,32 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="shadow">
+    <div class="row">
+        <div class="task-box">
+            1
+        </div>
+        <div class="task-box">
+            2
+        </div>
+        <div class="task-box">
+            3
+        </div>
+        <div class="task-box">
+            4
+        </div>
+    </div>
 </div>
+
+@section Scripts{
+    <script>
+        $('.task-box').
+        $(".task-box").click((item, e) => {
+            $(".task-box").each((index,item) => {
+                $(item).removeClass("task-box-active");
+            });
+             $(item.target).addClass('task-box-active');
+            console.log(item.target.outerText)
+        })
+    </script>
+}
