--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,15 +4,9 @@
 
 <div class="shadow">
     <div class="row">
-        <div class="task-box">
-            1
-        </div>
-        <div class="task-box">
-            2
-        </div>
-        <div class="task-box">
-            3
-        </div>
+        <object data="http://www.custommedia.my/" width="600" height="400" type="text/html">
+
+        </object>
        
     </div>
 </div>
