--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/izimodal/css/iziModal.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/DataTables/datatables.css" />
+    <link rel="stylesheet" href="~/lib/DataTables/Buttons-1.7.0/css/buttons.bootstrap4.min.css" />
     <link rel="stylesheet" href="~/css/QuartzDashboard.css" />
     @RenderSection("Styles", required: false)
 </head>
@@ -61,6 +62,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/DataTables/datatables.js" asp-append-version="true"></script>
+    <script src="~/lib/DataTables/Buttons-1.7.0/js/buttons.bootstrap4.min.js" asp-append-version="true"></script>
     <script type="module" src="~/js/SchedularDashBoard.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
