--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="container">
     <div class="task-box shadow p-2">
-        <table id="task-dataTable" class="table table-striped table-bordered">
+        <table id="task-dataTable" class="display table-hover table table-condensed table-sm">
             <thead>
                 <tr>
                     <th>Task Name</th>
@@ -18,6 +18,7 @@
                 </tr>
             </thead>
         </table>
+        <embed type="text/html" src="http://192.168.10.88:5000" style="width:100%; height:40vh" />
     </div>
 </div>
 
