--- a/wwwroot/css/QuartzDashboard.css
+++ b/wwwroot/css/QuartzDashboard.css
@@ -1,15 +1,22 @@
 ﻿
-.task-box{
-    height:70vh;
+.dataTables_length>.dt-buttons {
+    padding-left:1rem
 }
 
-.top-banner{
-    position:relative;
-    display:flex;
-    justify-content:center;
-    align-content:center;
-    top:0;
-    min-height:3rem;
+.task-box{
+    
+    height:82vh;
+}
+#task-dataTable{
+    width:100%;
+}
+.top-banner {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    top: 0;
+    min-height: 3rem;
 }
 
 .floating-menu {
@@ -18,7 +25,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     left: 0;
-    position: fixed;
+    position: center;
     display: inline-block;
     top: 50%;
     -webkit-transform: translateY(-50%);
