--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,43 +10,19 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/DataTables/datatables.css" />
     <link rel="stylesheet" href="~/lib/DataTables/Buttons-1.7.0/css/buttons.bootstrap4.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap-sweetalert/sweetalert.min.css" />
     <link rel="stylesheet" href="~/css/QuartzDashboard.css" />
     @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
-        <div class="vw-100 top-banner border-bottom mb-3">
+        <div class="vw-100 top-banner border-bottom mb-1 bg-dark text-light">
             <strong id="next-refresh-time" class="text-center align-self-center"></strong>
         </div>
-        <nav class="floating-menu">
-            <ul class="main-menu">
-                <li>
-                    <a asp-controller="Home" asp-action="Index" class="ripple">
-                        <i class="fas fa-home fa-lg"></i>
-                    </a>
-                </li>
-                <li>
-                    <a asp-controller="Home" asp-action="Calender" class="ripple">
-                        <i class="fas fa-calendar-day fa-lg"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="/Doc" class="ripple">
-                        <i class="fas fa-book-open fa-lg"></i>
-                    </a>
-                </li>
-                <li>
-                    <a asp-controller="Home" asp-action="Settings" class="ripple">
-                        <i class="fas fa-cogs fa-lg"></i>
-                    </a>
-                </li>
-                
-            </ul>
-            <div class="menu-bg"></div>
-        </nav>
     </header>
     <div class="container-fluid">
         <main role="main" class="pb-3">
+
             @RenderBody()
         </main>
     </div>
@@ -56,14 +32,15 @@
             &copy; 2021 - CalWebApi - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js" type="text/javascript"></script>
     <script src="~/lib/izimodal/js/iziModal.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
     <script src="~/lib/DataTables/datatables.js" asp-append-version="true"></script>
     <script src="~/lib/DataTables/Buttons-1.7.0/js/buttons.bootstrap4.min.js" asp-append-version="true"></script>
     <script type="module" src="~/js/SchedularDashBoard.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
 </body>
 </html>
