--- a/wwwroot/css/QuartzDashboard.css
+++ b/wwwroot/css/QuartzDashboard.css
@@ -31,3 +31,11 @@ object::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
     -moz-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 }
+
+.myClass{
+    background-color:red
+}
+
+.myClass:hover{
+    background-color:pink
+}
