--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -71,7 +71,7 @@
         <div>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link active" id="minutes-tab" data-toggle="tab" href="#task-minutes" role="tab" aria-controls="minutes" aria-selected="false">Minuets</a>
+                    <a class="nav-link active" id="minutes-tab" data-toggle="tab" href="#task-minutes" role="tab" aria-controls="minutes" aria-selected="false">Minutes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="hourly-tab" data-toggle="tab" href="#hourly" role="tab" aria-controls="hourly" aria-selected="false">Hourly</a>
@@ -79,9 +79,15 @@
                 <li class="nav-item">
                     <a class="nav-link" id="daily-tab" data-toggle="tab" href="#daily" role="tab" aria-controls="daily" aria-selected="false">Daily</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="weekly-tab" data-toggle="tab" href="#weekly" role="tab" aria-controls="weekly" aria-selected="false">Weekly</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="monthly-tab" data-toggle="tab" href="#monthly" role="tab" aria-controls="monthly" aria-selected="false">Monthly</a>
+                </li>
             </ul>
             <div class="tab-content" id="myTabContent">
-                <!--Tab 1-->
+                <!--Tab Minutes-->
                 <div class="tab-pane fade show active" id="task-minutes" role="tabpanel" aria-labelledby="minutes-tab">
                     <div class="row p-3">
                         <div class="col-3 form-inline">
@@ -98,7 +104,7 @@
                     </div>
                 </div>
 
-                <!--Tab 2-->
+                <!--Tab Hourly-->
                 <div class="tab-pane fade" id="hourly" role="tabpanel" aria-labelledby="hourly-tab">
                     <div class=" p-3">
                         <div class="form-inline">
@@ -166,18 +172,18 @@
                     </div>
                 </div>
 
-                <!--Tab 3-->
+                <!--Tab Daily-->
                 <div class="tab-pane fade" id="daily" role="tabpanel" aria-labelledby="daily-tab">
                     <div class="">
                         <div class="form-check-inline">
                             <input class="form-check-input" type="radio" name="dailyLable" id="daily-lable-one">
                             <label class="form-check-label" for="daily-lable-one">Everyday</label>
                         </div>
-                        <div class="form-check-inline mt-3">
+                        <div class="form-inline mt-2">
                             <input class="form-check-input" type="radio" name="dailyLable" id="daily-lable-one">
                             <label class="form-check-label" for="daily-lable-one">Every Weakday</label>
                         </div>
-                        <div class="form-inline">
+                        <div class="form-inline mt-3">
                             <label class="form-check-label">Start At</label>
                             <div class="form-inline ">
                                 <select class="form-control form-control-sm ml-2 mr-1" id="cron-hour-start" name="cronHourStart">
@@ -219,8 +225,85 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
-                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+
+                <!--Tab Weekly-->
+                <div class="tab-pane fade" id="weekly" role="tabpanel" aria-labelledby="weekly-tab">
+                    <div class="weekly-grid mt-3">
+                        @{ 
+                            for (int i = 0; i <= 6; i++)
+                            {
+                                string dayname = DateTimeFormatInfo.CurrentInfo.DayNames[i];
+                                <div class="form-check form-check-inline">
+                                    <input class="weekly-weekday-checkbox" type="checkbox" id="inlineCheckbox-@i" value="@dayname.ToLower()">
+                                    <label class="form-check-label" for="inlineCheckbox-@i">&nbsp;@dayname</label>
+                                </div> 
+                            }
+                         }
+                    </div>
+                    <div class="form-inline mt-3">
+                        <label class="form-check-label">Start At</label>
+                        <div class="form-inline ">
+                            <select class="form-control form-control-sm ml-2 mr-1" id="cron-hour-start" name="cronHourStart">
+                                @{
+                                    string weeklytwmp = "";
+                                    for (int i = 0; i < 24; i++)
+                                    {
+                                        if (i < 10)
+                                        {
+                                            weeklytwmp = string.Concat("0", i);
+                                        }
+                                        else
+                                        {
+                                            weeklytwmp = i.ToString();
+                                        }
+                                        <option value="@weeklytwmp ">@weeklytwmp</option>
+                                    }
+                                }
+                            </select>
+                            :
+                            <select class="form-control form-control-sm ml-1">
+                                @{
+                                    weeklytwmp = "";
+                                    for (int i = 0; i < 60; i++)
+                                    {
+                                        if (i < 10)
+                                        {
+                                            weeklytwmp = string.Concat("0", i);
+                                        }
+                                        else
+                                        {
+                                            weeklytwmp = i.ToString();
+                                        }
+                                        <option value="@weeklytwmp">@weeklytwmp</option>
+                                    }
+                                }
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Tab Monthly-->
+                <div class="tab-pane fade" id="monthly" role="tabpanel" aria-labelledby="monthly-tab">
+                    <div class="form-inline mt-3">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                            <label class="form-check-label" for="inlineRadio1">Day</label>
+                        </div>
+                        <input type="number" max="31" min="1"  value="1"/>
+                        <label>For every</label>
+                        <select>
+                            <option></option>
+                        </select>
+                    </div>
+                    <div>
+
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+
+
                 <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
             </div>
         </div>
